--- a/templates/base.html
+++ b/templates/base.html
@@ -29,10 +29,19 @@
             Customers <span class="sr-only">(current)</span>
           </a>
         </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/best-customers">
+            Best Customers <span class="sr-only">(current)</span>
+          </a>
+        </li>
         <li class="nav-item">
           <a class="nav-link" href="/add/">Add a Customer</a>
         </li>
       </ul>
+      <form class="d-flex" action="/search">
+        <input class="form-control me-sm-2" type="text" placeholder="Search" name="name">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
   </nav>
 
