added moment.js functionality to most recent reservation on customer details page

--- a/templates/customer_detail.html
+++ b/templates/customer_detail.html
@@ -20,6 +20,9 @@
       <h2>Reservations</h2>
       {% if reservations %}
         <ul>
+            <li>
+              {{ firstReservation.getMostRecentStartAt() }}
+            </li>
           {% for reservation in reservations %}
             <li>
               <b>{{ reservation.getFormattedStartAt() }}</b>
